chore: fixing workflow; echo github_ref

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,8 +11,11 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: echo
+        run: echo "running on github ref GITHUB_REF"
+
       - name: Exit if not on main branch
-        if: endsWith(github.event.base_ref, 'main') == false
+        if: endsWith(github.ref, 'main') == false
         run: exit -1
 
       - name: Publish
