chore: fixing workflow; echo github_ref

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo
-        run: echo "running on github ref GITHUB_REF"
+        run: echo "running on github ref $GITHUB_REF"
 
       - name: Exit if not on main branch
         if: endsWith(github.ref, 'main') == false
