--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo
-        run: echo "running on github ref $GITHUB_REF  base ref= $GITHUB_BASE_REF"
+        run: echo "running on github ref $GITHUB_REF  event = ${{github.event}}"
 
       - name: Exit if not on main branch
-        if: endsWith(github.ref, 'main') == false
+        if: endsWith(github.event.base_ref, 'main') == false
         run: exit -1
 
       - name: Publish
