--- a/.github/workflows/on_commit.yaml
+++ b/.github/workflows/on_commit.yaml
@@ -10,12 +10,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Go ${{ matrix.go-version }}
+      - name: Setup Go 1.20
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
-      - name: Install dependencies
-        run: go get .
+          go-version: "1.20.x"
       - name: Test module - Bruce
         run: go test ./bruce
       - name: Test module - Log
